<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customname="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".fragment.Fragment_Preferences">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/select_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/myFontSize20"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/select_background"/>
        <LinearLayout
            android:id="@+id/ll_bac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="9"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/image_0"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_1"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_2"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="9"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/image_3"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_4"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_5"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="9"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/image_6"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_7"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_8"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="9"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/image_9"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_10"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_11"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="9"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/image_12"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_13"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />
                <CheckBox
                    android:id="@+id/image_14"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:gravity="bottom"
                    android:background="@drawable/logo"  />

            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/myFontSize20"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/select_category"/>
        <LinearLayout
            android:id="@+id/ll_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/affirmation_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_0"/>
            <CheckBox
                android:id="@+id/affirmation_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_1"/>
            <CheckBox
                android:id="@+id/affirmation_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_2"/>
            <CheckBox
                android:id="@+id/affirmation_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_3"/>
            <CheckBox
                android:id="@+id/affirmation_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_4"/>
            <CheckBox
                android:id="@+id/affirmation_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_5"/>
            <CheckBox
                android:id="@+id/affirmation_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_6"/>
            <CheckBox
                android:id="@+id/affirmation_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_7"/>
            <CheckBox
                android:id="@+id/affirmation_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_8"/>
            <CheckBox
                android:id="@+id/affirmation_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/myFontSize14"
                android:text="@string/affirmation_9"/>
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/change_bac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/myFontSize18"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/change_bac"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/change_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/myFontSize18"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/change_quote"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/set_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/myFontSize18"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/set_wallpaper"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/myFontSize18"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/about"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/myFontSize18"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/share"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/meditacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/myFontSize18"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/meditacion"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
