<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.aboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="20dp"
            android:src="@drawable/logo"  />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/info"
              />
    </LinearLayout>

    <Button
        android:id="@+id/go_playstore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_playstore"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/donacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donacion" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/txt_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

            <Button
                android:id="@+id/btn_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>